[gd_scene load_steps=5 format=3 uid="uid://crejfgayl0o5o"]

[ext_resource type="Script" uid="uid://wbpe8ajg2v2x" path="res://Scripts/projectile.gd" id="1_f8cdk"]
[ext_resource type="Texture2D" uid="uid://bn6sqbb341j3l" path="res://icon.svg" id="2_yr2qt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_at5ip"]
radius = 4.0

[sub_resource type="SpriteFrames" id="SpriteFrames_f8cdk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yr2qt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Area2D" type="Area2D"]
collision_layer = 8
collision_mask = 14
script = ExtResource("1_f8cdk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_at5ip")

[node name="LifeTime" type="Timer" parent="."]
process_callback = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.3841858e-07, 2.3841858e-07)
scale = Vector2(0.062499996, 0.062499996)
sprite_frames = SubResource("SpriteFrames_f8cdk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
